// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`match() should fail  1`] = `
Object {
  "message": "Value should match regexp: /test/",
  "path": Array [],
  "type": "single",
  "value": "Some text have be read",
}
`;

exports[`match() should support custom message 1`] = `
Object {
  "message": "Custom message",
  "path": Array [],
  "type": "single",
  "value": "Some text have be read",
}
`;
